# Yakimoji

./: .env.example  .gitignore  .npmrc  AGENT.md  AGENTS.md  DESIGN.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  server.js  tsconfig.node.tsbuildinfo  tsconfig.vite.json  tsconfig.vite.tsbuildinfo  vite.config.ts
.agents/skills/bmad-story-automator/: README.md  pyproject.toml  workflow.md
.agents/skills/bmad-story-automator/data/: agent-config-presets.json  agent-config-prompts.md  agent-fallback.md  monitoring-codex.md  monitoring-fallback.md  orchestrator-rules-appendix.md  retrospective-automation.md  retry-fallback-implementation.md  scripts-reference.md  stop-hook-recovery.md  stop-hook-troubleshooting.md  subagent-prompts-analysis.md  subagent-prompts.md  success-patterns.md  tmux-commands.md  tmux-long-command-testing.md  wrapup-templates.md
.agents/skills/bmad-story-automator/data/parse/: dev.json
.agents/skills/bmad-story-automator/data/prompts/: create.md  dev.md  review.md
.agents/skills/bmad-story-automator/src/story_automator/: __init__.py  cli.py
.agents/skills/bmad-story-automator/src/story_automator/adapters/: tmux.py
.agents/skills/bmad-story-automator/src/story_automator/commands/: __init__.py  agent_config_cmd.py  (+4 more)
.agents/skills/bmad-story-automator/steps-c/: step-01-init.md  step-01b-continue.md  step-03-execute.md  step-03b-execute-finish.md  step-03c-execute-complete.md  step-04-wrapup.md
.agents/skills/bmad-story-automator/steps-e/: step-e-01-load.md
.agents/skills/bmad-story-automator/steps-v/: step-v-02-report.md
(+267 files in other folders)
