[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-automator"
version = "1.14.2"
description = "Python parity port of the BMAD story automator helper"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "BMAD", email = "bmad.directory@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.scripts]
story-automator = "story_automator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/story_automator"]
